--- a/Photovoltic_API/bin/Photovoltic_API.dll.config
+++ b/Photovoltic_API/bin/Photovoltic_API.dll.config
@@ -25,7 +25,7 @@
 	  <httpProtocol>
 		  <customHeaders>
 			  <add name="Access-Control-Allow-Origin" value="*" />
-			  <add name="Access-Control-Allow-Credentials" value="true"/>
+			  <add name="Access-Control-Allow-Credentials" value="true" />
 			  <add name="Access-Control-Allow-Headers" value="Content-Type" />
 			  <add name="Access-Control-Allow-Methods" value="GET, POST, PUT, DELETE, OPTIONS" />
 		  </customHeaders>
@@ -64,6 +64,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="1.0.0.0-5.2.9.0" newVersion="5.2.9.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
