--- a/Photovoltic_API/bin/Photovoltic_API.dll.config
+++ b/Photovoltic_API/bin/Photovoltic_API.dll.config
@@ -77,4 +77,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=2.0.1.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:default /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-<connectionStrings><add name="DB_WeatherEntities" connectionString="metadata=res://*/Models.Photovoltic.csdl|res://*/Models.Photovoltic.ssdl|res://*/Models.Photovoltic.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DB_Weather;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings></configuration>
+<connectionStrings>
+	<add name="DB_WeatherEntities" 
+   connectionString="metadata=res://*/Models.Photovoltic.csdl|res://*/Models.Photovoltic.ssdl|res://*/Models.Photovoltic.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DB_Weather;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
+		 providerName="System.Data.EntityClient" />
+</connectionStrings>
+</configuration>
