--- a/Photovoltic_API/bin/Photovoltic_API.dll.config
+++ b/Photovoltic_API/bin/Photovoltic_API.dll.config
@@ -39,7 +39,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="Newtonsoft.Json" culture="neutral" publicKeyToken="30ad4fe6b2a6aeed" />
-        <bindingRedirect oldVersion="0.0.0.0-12.0.0.0" newVersion="12.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-13.0.0.0" newVersion="13.0.0.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -67,7 +67,11 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Memory" publicKeyToken="cc7b13ffcd2ddd51" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.1.1" newVersion="4.0.1.1" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.1.2" newVersion="4.0.1.2" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-6.0.0.0" newVersion="6.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -78,8 +82,6 @@
     </compilers>
   </system.codedom>
 <connectionStrings>
-	<add name="DB_WeatherEntities" 
-   connectionString="metadata=res://*/Models.Photovoltic.csdl|res://*/Models.Photovoltic.ssdl|res://*/Models.Photovoltic.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DB_Weather;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" 
-		 providerName="System.Data.EntityClient" />
+	<add name="DB_WeatherEntities" connectionString="metadata=res://*/Models.Photovoltic.csdl|res://*/Models.Photovoltic.ssdl|res://*/Models.Photovoltic.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.;initial catalog=DB_Weather;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
 </connectionStrings>
 </configuration>
