--- a/Photovoltic_API/packages.config
+++ b/Photovoltic_API/packages.config
@@ -3,7 +3,12 @@
   <package id="Antlr" version="3.5.0.2" targetFramework="net472" />
   <package id="bootstrap" version="5.2.3" targetFramework="net472" />
   <package id="BouncyCastle" version="1.8.9" targetFramework="net472" />
+  <package id="BouncyCastle.Cryptography" version="2.2.1" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
+  <package id="Google.Apis" version="1.61.0" targetFramework="net472" />
+  <package id="Google.Apis.Auth" version="1.61.0" targetFramework="net472" />
+  <package id="Google.Apis.Core" version="1.61.0" targetFramework="net472" />
+  <package id="Google.Apis.Gmail.v1" version="1.61.0.3105" targetFramework="net472" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net472" />
   <package id="jQuery" version="3.4.1" targetFramework="net472" />
   <package id="Microsoft.AspNet.Cors" version="5.2.9" targetFramework="net472" />
@@ -21,13 +26,14 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
   <package id="Microsoft.Extensions.Logging.Abstractions" version="2.1.1" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="2.0.1" targetFramework="net472" />
+  <package id="MimeKit" version="4.1.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
-  <package id="Newtonsoft.Json" version="12.0.2" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="13.0.3" targetFramework="net472" />
   <package id="Quartz" version="3.6.3" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
   <package id="System.Diagnostics.DiagnosticSource" version="4.7.1" targetFramework="net472" />
-  <package id="System.Memory" version="4.5.4" targetFramework="net472" />
+  <package id="System.Memory" version="4.5.5" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
-  <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.3" targetFramework="net472" />
+  <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net472" />
   <package id="WebGrease" version="1.6.0" targetFramework="net472" />
 </packages>
