--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,8 @@
 packages/
 .vs/
 .git/
+Photovoltic_API/TempPdf/020974d1-a283-4304-8e32-2c29b2f8e729Chart.png
+Photovoltic_API/TempPdf/7c83215b-4fcc-4d20-ab15-249b0ce7e08fChart.png
+Photovoltic_API/TempReport/Project_Report_0cfea884-d20d-4606-917f-b1dbc76c31e1.pdf
+Photovoltic_API/TempReport/Project_Report_e1a24248-6bf1-4df7-b522-debf4410dffd.pdf
+Photovoltic_API/TempReport/Project_Report_0cfea884-d20d-4606-917f-b1dbc76c31e1.pdf
